--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,13 @@
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);
 @import url(../blocks/header/__square-pic/header__square-pic.css);
-
-
+/* Description*/
+@import url(../blocks/description/description.css);
+@import url(../blocks/description/two-columns/two-columns.css);
+@import url(../blocks//description/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/description/two-columns/__main-text/two-columns__main-text.css);
+@import url(../blocks/description/two-columns/__paragraph/two-columns__paragraph.css);
+@import url(../blocks/description/two-columns/__span-accent/two-columns__span-accent.css);
 /* Цвета */
 
 /* Серый фон: #1f1f1f; */
@@ -18,7 +23,10 @@
 /* Синие ссылки и фигуры: #2f80ed */
 /* черный текст: #000000 */
 
-
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+  padding: 0;
+}
 
 .page {
   min-width: 1100px;
