Сверстана секция techniques

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,17 @@
 @import url(../vendor/normalize.css);
 @import url(font.css);
+/* Logo */
+@import url(../blocks/logo/logo.css);
+
 /* Header */
 @import url(../blocks/header/header.css);
-@import url(../blocks/logo/logo.css);
 @import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);
 @import url(../blocks/header/__square-pic/header__square-pic.css);
+
 /* Description*/
 @import url(../blocks/description/description.css);
 @import url(../blocks/description/two-columns/two-columns.css);
@@ -16,6 +19,20 @@
 @import url(../blocks/description/two-columns/__main-text/two-columns__main-text.css);
 @import url(../blocks/description/two-columns/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/description/two-columns/__span-accent/two-columns__span-accent.css);
+
+/* Section-title & Section-subtitle */
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-subtitle/section-subtitle.css);
+
+/* Techniques */
+@import url(../blocks/techniques/techniques.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__title/cards__title.css);
+
+
 /* Цвета */
 
 /* Серый фон: #1f1f1f; */
@@ -26,6 +43,10 @@
 h1,h2,h3,h4,h5,h6 {
   margin: 0;
   padding: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .page {
