--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,6 +1,6 @@
 .table {
   width: 1100px;
-  margin: 0 auto 100px auto;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
