--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
 @import url(../vendor/normalize.css);
 @import url(font.css);
-/* Logo */
+/* Logo --> place_header */
 @import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
 
 /* Header */
 @import url(../blocks/header/header.css);
-@import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -24,8 +24,14 @@
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
 
+/* Section-title & Section-subtitle --> theme_dark */
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
+
 /* Techniques */
 @import url(../blocks/techniques/techniques.css);
+
+/* Cards */
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__description/cards__description.css);
 @import url(../blocks/cards/__image/cards__image.css);
@@ -34,10 +40,20 @@
 
 /* Digits */
 @import url(../blocks/digits/digits.css);
-@import url(../blocks/digits/table/table.css);
-@import url(../blocks/digits/table/__cell/table__cell.css);
-@import url(../blocks/digits/table/__heading/table__heading.css);
-@import url(../blocks/digits/table/__text/table__text.css);
+
+/* Table --> theme_dark */
+@import url(../blocks/table/table.css);
+@import url(../blocks/table/_theme/table_theme_dark.css);
+@import url(../blocks/table/__cell/table__cell.css);
+@import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
+@import url(../blocks/table/__heading/table__heading.css);
+@import url(../blocks/table/__heading/_theme/table__heading_theme_dark.css);
+@import url(../blocks/table/__text/table__text.css);
+@import url(../blocks/table/__text/_theme/table__text_theme_dark.css);
+
+/* Kaufman */
+@import url(../blocks/kaufman/kaufman.css);
+
 
 
 /* Цвета */
@@ -69,14 +85,5 @@ h1, h2, h3, h4, h5, h6, p {
 
 
 
-
-
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
 
 
