--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,10 @@
 /* Kaufman */
 @import url(../blocks/kaufman/kaufman.css);
 
+/* Resources */
+@import url(../blocks/resources/resources.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
 
 
 /* Цвета */
