--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -6,8 +6,13 @@
   margin-top: 10px;
   display: flex;
   align-items: center;
+  transition: opacity .2s linear;
 }
 
 .footer__column-link:first-child {
   margin-top: 0;
+}
+
+.footer__column-link:hover {
+  opacity: .3;
 }
