--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -2,5 +2,10 @@
   color: #2f80ed;
   text-decoration: none;
   z-index: 3;
+  transition: opacity .2s linear;
+}
+
+.header__link:hover {
+  opacity: .3;
 }
 
