--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,5 +7,6 @@
   min-height: 600px;
   max-height: 756px;
   background: #f2f2f2;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
