--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -2,7 +2,7 @@
   position: relative;
   padding-top: 100px;
   background: #f2f2f2;
-  min-height: 843px;
+  height: 890px;
   background-image: url(../../images/feynman.png);
   background-repeat:no-repeat;
   background-position: left bottom;
