--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,5 +1,6 @@
 .two-columns__paragraph {
-  line-height: 24px;
+  margin: 0;
+  line-height: 34px;
   font-size: 24px;
   font-weight: 400;
   margin-top: 30px;
