--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,4 +1,5 @@
 .footer__column-link {
+  display: block;
   line-height: 18px;
   font-size: 18px;
   color: #fff;
@@ -7,10 +8,6 @@
   display: flex;
   align-items: center;
   transition: opacity .2s linear;
-}
-
-.footer__column-link:first-child {
-  margin-top: 0;
 }
 
 .footer__column-link:hover {
