--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -1,5 +1,8 @@
 .footer__column-links {
-  margin-top: 20px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 10px;
   margin-bottom: 16px;
   display: flex;
   flex-direction: column;
