Еще исправления index.html

--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,4 +1,9 @@
 .kaufman__triangle {
+  width: 995px;
+  height: 1006px;
+  background-image: url(../../../images/kaufman-triangle.svg);
+  background-size: contain;
+  background-position: center;
   z-index: 1;
   transform-origin: center;
   position: absolute;
