--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,5 +1,6 @@
 .resources__logo-zone {
-  list-style: none;
+  list-style-type: none;
+  margin: 0;
   padding: 0;
   width: 1100px;
   margin: 80px auto 0 auto;
