--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,10 @@
 .footer {
-  background: #1f1f1f;
+  box-sizing: border-box;
   padding: 60px 0 40px 0;
   min-height: 350px;
-  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  background-color: #1f1f1f;
 }
 
 
